# diffrant_native

./: .env  .gitignore  .gitmodules  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: prepare-bundle-libs.sh
src/: App.css  App.tsx  main.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  server.rs
src-tauri/src/readers/: mod.rs  nxs.rs
