[package]
name = "diffrant-native"
version = "0.0.0"
edition = "2021"

[lib]
name = "diffrant_native_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# HDF5 / NeXus reading (same crate alias as serious/backend)
hdf5 = { version = "0.12.3", package = "hdf5-metno" }
ndarray = "0.16"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
